Fixed alignment of images

--- a/src/eRegistryFrontend/src/app/components/help/help.component.css
+++ b/src/eRegistryFrontend/src/app/components/help/help.component.css
@@ -16,11 +16,5 @@
   display: block;
   max-width:90%;
   max-height:100%;
-}
-
-.img-bounds-small {
-  display: block;
-  max-width:90%;
-  max-height:100%;
   margin: auto;
 }
